# rlox

./: Cargo.toml  README.md  rustc-ice-2024-10-13T21_05_46-45652.txt
examples/: class.lox  class_inheritance.lox  class_init.lox  class_invalid_return_from_init.lox  class_invalid_this_in_static_method.lox  class_not_unique_static_fields.lox  class_static_method.lox  control_flow_if.lox  enum.lox  function.lox  function_local_function.lox  function_static_scope.lox  invalid_enum_variant.lox  invalid_return.lox  invalid_this_usage.lox  loops_break.lox  scope.lox  variable_not_used.lox  while.lox
src/: main.rs
src/ast/: ast.rs  mod.rs  parser.rs  resolver.rs
src/cli/: cli.rs
src/error/: error.rs
src/interpreter/: class.rs  environment.rs  interpreter.rs  lexer.rs  lox_enum.rs  mod.rs  native.rs  runtime.rs  token.rs
src/representation/: interpreter.rs  lexer.rs  mod.rs  token.rs
tests/: cli.rs
