[package]
name = "rlox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.17", features = ["default", "derive"] }
lazy_static = "1.5.0"
log = "0.4.22"
miette = { version = "7.2.0", features = ["fancy"] }


[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
